--- a/Console/Console.csproj
+++ b/Console/Console.csproj
@@ -111,6 +111,7 @@
   <ItemGroup>
     <Compile Include="MappingConventions.cs" />
     <Compile Include="MappingOverrides.cs" />
+    <Compile Include="Mappings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setup.cs" />
