--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ build
 *.csproj.user
 
 *.resharper.user
-
+*.ReSharper.user
 *.resharper
 
 *.suo
@@ -22,3 +22,4 @@ build
 *~
 
 *.swp
+TestResult.xml
